@@ -237,6 +237,8 @@ Extension modules
 Library
 -------
 
+- Support non-anonymous ftp URLs in urllib2.
+
 - The encodings package will now applies codec name aliases
   first before starting to try the import of the codec module.
   This simplifies overriding built-in codecs with external
